# tvdb4

./: .gitignore  Cargo.toml  README.md
docs/: Alias.md  ArtworkApi.md  ArtworkBaseRecord.md  ArtworkExtendedRecord.md  ArtworkStatus.md  ArtworkStatusesApi.md  ArtworkType.md  ArtworkTypesApi.md  AwardBaseRecord.md  AwardCategoriesApi.md  AwardCategoryBaseRecord.md  AwardCategoryExtendedRecord.md  AwardExtendedRecord.md  AwardNomineeBaseRecord.md  AwardsApi.md  Biography.md  Character.md  CharactersApi.md  Companies.md  CompaniesApi.md  Company.md  CompanyRelationShip.md  CompanyType.md  ContentRating.md  ContentRatingsApi.md  CountriesApi.md  Country.md  Entity.md  EntityType.md  EntityTypesApi.md  EntityUpdate.md  EpisodeBaseRecord.md  EpisodeExtendedRecord.md  EpisodesApi.md  FavoriteRecord.md  Favorites.md  FavoritesApi.md  Gender.md  GendersApi.md  GenreBaseRecord.md  (+110 more)
src/apis/: artwork_api.rs  artwork_statuses_api.rs  artwork_types_api.rs  award_categories_api.rs  awards_api.rs  characters_api.rs  companies_api.rs  configuration.rs  content_ratings_api.rs  countries_api.rs  entity_types_api.rs  episodes_api.rs  favorites_api.rs  genders_api.rs  genres_api.rs  inspiration_types_api.rs  languages_api.rs  lists_api.rs  login_api.rs  mod.rs  movie_statuses_api.rs  movies_api.rs  people_api.rs  people_types_api.rs  search_api.rs  seasons_api.rs  series_api.rs  series_statuses_api.rs  source_types_api.rs  updates_api.rs  user_info_api.rs
src/models/: _login_post_200_response.rs  _login_post_200_response_data.rs  _login_post_request.rs  (+119 more)
tests/: search.rs  setup.rs
